Ensure operations in table do not wrap

--- a/css/app.scss
+++ b/css/app.scss
@@ -131,3 +131,10 @@ form {
 a[ng-click] {
 	cursor: pointer;
 }
+
+.operations {
+	td:first-child {
+		white-space: nowrap;
+		text-align: left;
+	}
+}
